<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_dictionaries"
        android:icon="@drawable/ic_action_books"
        app:showAsAction="ifRoom"
        android:title="@string/dictionaries"/>
    <item
        android:id="@+id/menu_download"
        android:icon="@drawable/ic_action_download"
        app:showAsAction="ifRoom"
        android:title="@string/downloads"/>
    <item
        android:id="@+id/menu_favorites"
        android:icon="@drawable/ic_action_star_ok"
        app:showAsAction="ifRoom"
        android:title="@string/favorites"/>
    <item
        android:id="@+id/menu_information"
        android:icon="@drawable/ic_action_info"
        app:showAsAction="ifRoom"
        android:title="@string/credits"/>

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_action_info"
        app:showAsAction="ifRoom"
        android:title="@string/settings"/>
</menu>