<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:descendantFocusability="blocksDescendants"
    android:clickable="false"
    android:layout_height="fill_parent" >

    <ImageView
        android:id="@+id/imagen_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/margin"
        android:contentDescription="@string/favorite"
        android:src="@android:drawable/btn_star" />


    <TextView
        android:id="@+id/titulo_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_toRightOf="@+id/imagen_item"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="?android:textColorPrimary"/>


    <TextView
        android:id="@+id/subtitulo_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titulo_item"
        android:layout_marginBottom="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_toRightOf="@+id/imagen_item"
        android:paddingBottom="5dp"
        android:text="@string/author"
        android:textColor="@color/black2" />

</RelativeLayout>